--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,8 @@
   color: #61dafb;
 }
 
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +38,15 @@
     transform: rotate(360deg);
   }
 }
+
+@media (min-width: 576px) { 
+  .login-form{
+    width:60%;
+  }
+  .signup-form{
+    width:60%;
+  }
+}
+
+
+
